# fnsolver

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  mingw-w64-x86_64.cmake
.github/workflows/: build.yml
fnsolver/: CMakeLists.txt  fnsolver_config.h.in
fnsolver/cli/: CMakeLists.txt  cli_options.cpp  cli_options.h  main.cpp
fnsolver/data/: CMakeLists.txt  fnsite.cpp  fnsite.h  precious_resource.cpp  precious_resource.h  probe.cpp  probe.h  resource_yield.cpp  resource_yield.h
fnsolver/gui/: CMakeLists.txt  QGraphicsItemDeleter.h  QObjectDeleter.h  about_dialog.cpp  about_dialog.h  abstract_solver_options_widget.h  constraints_widget.cpp  constraints_widget.h  description_widget.cpp  description_widget.h  fn_site_widget.cpp  fn_site_widget.h  fnsite_ui.cpp  fnsite_ui.h  fnsite_ui.py  fnsolver-gui.rc  game.h  game_selector.cpp  game_selector.h  image_provider.cpp  image_provider.h  inventory_model.cpp  inventory_model.h  main.cpp  main_window.cpp  main_window.h  mira_map.cpp  mira_map.h  options_loader.cpp  options_loader.h  precious_resource_ui.cpp  precious_resource_ui.h  probe_ui.cpp  probe_ui.h  qicon_from_theme.cpp  qicon_from_theme.h  run_dialog.cpp  run_dialog.h  run_progress_dialog.cpp  run_progress_dialog.h  (+9 more)
fnsolver/gui/resources/: resources.qrc
fnsolver/gui/translations/: fnsolver_en_US.ts
fnsolver/layout/: CMakeLists.txt  layout.cpp  layout.h  placement.cpp  placement.h  resolved_placement.cpp  resolved_placement.h
fnsolver/solver/: CMakeLists.txt  options.cpp  options.h  score_function.cpp  score_function.h  solution.cpp  solution.h  solver.cpp  solver.h
fnsolver/util/: CMakeLists.txt  output.hpp
install/: CMakeLists.txt  fnsolver.desktop
